# Rover

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_Rover_RYCSV.yaml  parameters.yaml
launch/: empty_map.launch  only_map.launch  run_proyect.launch
meshes/: Acople_1.STL  Acople_2.STL  Acople_3.STL  Acople_4.STL  Acople_5.STL  Acople_6.STL  Bogie_Der.STL  Bogie_Izq.STL  Bogie_der.STL  Bogie_izq.STL  Caja.STL  Caja_2.STL  Llanta_1.STL  Llanta_2.STL  Llanta_3.STL  Llanta_4.STL  Llanta_5.STL  Llanta_6.STL  Pivote.STL  Rocker_Der.STL  Rocker_Izq.STL  Rocker_der.STL  Rocker_izq.STL  Rueda_1.STL  Rueda_2.STL  Rueda_3.STL  Rueda_4.STL  Rueda_5.STL  Rueda_6.STL  Union_1.STL  Union_2.STL
models/mapa_rover/: model.config  model.sdf
models/mapa_rover/materials/scripts/: mapa_texture.material
models/mapa_rover/meshes/: mapa_2.dae
rviz/: config.rviz
scripts/: Seguimiento_Visual_Node.py  TF_node.py  class_TF.py  class_TF_lineal.py  class_control_caja.py  class_control_dir_ruedas.py  class_control_lineal.py  class_control_motores.py  class_control_path_coord.py  class_lecture_key.py  class_load_image.py  class_model.py  class_seguimiento_visual.py  control_caja_node.py  control_dir_ruedas_node.py  control_motores_node.py  control_path_coord_node.py  controlador_node.py  lecture_key_node.py  load_image_node.py
urdf/: camera.gazebo.xacro  gps.gazebo.xacro  imu.gazebo.xacro  kinect.gazebo.xacro  lidar.gazebo.xacro  rover.urdf.xacro  rover_RYCSV.csv  rover_RYCSV.urdf.xacro
worlds/: animated_box.world  animated_box3.world  animated_laberinto.world  calibracion_dinamico.world  calibracion_estatico.world  calibracion_estatico_2esferas.world  empty.world  mapa.world  mapa_proyecto.world
