<package format="2">
  <name>rover_RYCSV</name>
  <version>1.0.0</version>

  <description>
    <p>URDF Description package for rover_RYCSV</p>
    <p>This package contains configuration data, 3D models and launch files
for rover_RYCSV robot</p>
  </description>


  <maintainer email="jdcaballeroco@unal.edu.co">Jesus Caballero</maintainer>
  <maintainer email="hmontes@unal.edu.co">Alejandro Montes</maintainer>
  <maintainer email="jhiguera@unal.edu.co">Johan Higuera</maintainer>
  <maintainer email="seccortessa@unal.edu.co">Sebatian Cortes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>